WanaLyzer/out/numpy/typing/tests/data/pass/modules.pyi
from numpy import f2py as f2py
