WanaLyzer/out/numpy/typing/tests/data/fail/datasource.pyi
import numpy as np
from pathlib import Path

path: Path
d1: np.DataSource
